Change CapsLock remapping pref to not be syncable, so each device can have its own value.  Update EventRewriter to honor local CapsLock pref setting, even if the UI doesn't show CapsLock in keyboard dialog.

BUG=167237

Review URL: https://chromiumcodereview.appspot.com/13008005

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@198999 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 0f424fd9cf04cea0101f5d7f3059093d8fe3ddd7